layout and content updates

--- a/index.html
+++ b/index.html
@@ -6,18 +6,36 @@ permalink: /
 <h1>16 Henchman St, North End, Boston</h1>
 
 <p class='intro'>
-     Our 304sq.ft studio right in a quiet part of the North End is perfect for anyone looking for a tiny home experience in the heart of Boston. It's walking distance from tons of awesome restaurants, bars and the green and orange lines. On the 5th floor of a walk-up, it includes a private deck that adds an extra 300sq. ft of outdoor living space.
+     Our 304 sq ft studio in a quiet area of the North End is perfect for anyone looking for a tiny&ndash;home experience in the heart of Boston. Tons of fantastic resaurants are just outside your door, and it's a short walk to the Boston Public Market or North Station for the T and commuter rail. On the 5th floor of a walk-up, it includes a private roofdeck that adds an extra 300 sq ft of outdoor living space.
 </p>
 
+<p class='intro'>
+  $2,000 per month, includes utilities
+</p>
+
+<h2>The Studio</h2>
 <div class='columns'>
   <div class='col col-left'>
-    <h2>The Studio</h2>
     <p>
-      Renovated less than a year ago, it has a brand new kitchen with quartz countertops and Bosch dishwasher, a brand new bathroom with custom shower and heat fan, and a wall-mounted A/C &amp; heating unit. The apartment comes partially furnished with a couch, pantry unit and murphy bed, so you don't need to move large pieces up the stairs. Just bring your clothes and kitchen gear! The microwave and toaster oven are also included as they are exactly sized of their space in the kitchen. It also includes some smaller items (small bookshelves, stools, chairs) that can stay or go as you like.
+      Renovated less than a year ago, it has a brand new kitchen with quartz countertops and Bosch dishwasher, a brand new bathroom with custom shower and heat fan, and a wall-mounted A/C &amp; heating unit. The apartment comes partially furnished with a couch, pantry unit and murphy bed, so you don't need to move large pieces up the stairs. Just bring your clothes and kitchen gear! The microwave and toaster oven are also included as they are specifically sized for their space in the kitchen. It also includes some smaller items (small bookshelves, stools, chairs) that can stay or go as you like.
     </p>
   </div>
 
   <div class='col col-right'>
+      <div class="thumbs">
+        <img src="/img/16HenchmanApartment - 9.jpg" />
+        <img src="/img/16HenchmanApartment - 13.jpg" />
+        <img src="/img/16HenchmanApartment - 16.jpg" />
+        <img src="/img/16HenchmanApartment - 3.jpg" />
+      </div>
+      <p class='intro' style="text-align: center;">
+        <a href='#photos'> See more photos below!</a>
+      </p>
+  </div>
+</div>
+
+<div class='columns'>
+  <div class='col col-left'>
     <h2>Features</h2>
     <ul>
       <li>Newly renovated kitchen with Bosch dishwasher and full-sized gas stove</li>
@@ -30,20 +48,20 @@ permalink: /
       <li>Basement Storage Unit &amp; Coin Laundry</li>
     </ul>
   </div>
+  <div class='col col-right'>
+    <h2>Furnishings</h2>
+    <ul>
+      <li>Queen Murphy Bed with Desk (bring your own mattress)</li>
+      <li>Modern couch</li>
+      <li>Pantry Unit</li>
+      <li>4 indoor/outdoor chairs</li>
+      <li>2 Dining stools</li>
+      <li>TV wall mount</li>
+      <li>Small bookshelves</li>
+      <li>Microwave</li>
+      <li>Toaster Oven</li>
+      <li>Natural gas grill (no propane tanks!)</li>
+      <li>Deck table &amp; chairs</li>
+    </ul>
+  </div>
 </div>
-<h2>Furnishings</h2>
-<ul>
-  <li>Queen Murphy Bed with Desk (bring your own mattress)</li>
-  <li>Modern couch</li>
-  <li>Pantry Unit</li>
-  <li>4 indoor/outdoor chairs</li>
-  <li>2 Dining stools</li>
-  <li>TV wall mount</li>
-  <li>Small bookshelves</li>
-  <li>Microwave</li>
-  <li>Toaster Oven</li>
-  <li>Natural gas grill (no propane tanks!)</li>
-  <li>Deck chairs</li>
-  <li>Deck table</li>
-</ul>
-
