--- a/index.html
+++ b/index.html
@@ -39,28 +39,31 @@ permalink: /
     <h2>Features</h2>
     <ul>
       <li>Newly renovated kitchen with Bosch dishwasher and full-sized gas stove</li>
-      <li>Built in and dining counter</li>
+      <li>Built-in  dining peninsula</li>
       <li>Under-counter drawer and bar style fridges with separate freezer</li>
       <li>Newly renovated bathroom with large stand-up shower and tons of storage</li>
-      <li>Private roof deck with built-in raised garden beds, gas, water and electricity.</li>
-      <li>European Style build-in AC &amp; heating unit</li>
-      <li>Custom closets</li>
+      <li>Private roofdeck with built-in raised garden beds, gas, water and electricity.</li>
+      <li>Built-in AC &amp; heating unit</li>
+      <li>Brand new built-in closets with drawers and hanging space</li>
       <li>Basement Storage Unit &amp; Coin Laundry</li>
     </ul>
   </div>
   <div class='col col-right'>
     <h2>Furnishings</h2>
     <ul>
-      <li>Queen Murphy Bed with Desk (bring your own mattress)</li>
-      <li>Modern couch</li>
+      <li>Queen-sized murphy bed (bring your own mattress) with built-in desk</li>
+      <li>Modern-style couch</li>
       <li>Pantry Unit</li>
+      <li>Natural gas grill (no propane tanks!)</li>      
+    </ul>
+    <h3>Optional Furnishings</h3>
+    <ul>
+      <li>Microwave</li>
+      <li>Toaster Oven</li>
       <li>4 indoor/outdoor chairs</li>
       <li>2 Dining stools</li>
       <li>TV wall mount</li>
       <li>Small bookshelves</li>
-      <li>Microwave</li>
-      <li>Toaster Oven</li>
-      <li>Natural gas grill (no propane tanks!)</li>
       <li>Deck table &amp; chairs</li>
     </ul>
   </div>
