--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ permalink: /
 <h1>16 Henchman St, North End, Boston</h1>
 
 <p class='intro'>
-     Our 304 sq ft studio in a quiet area of the North End is perfect for anyone looking for a tiny&ndash;home experience in the heart of Boston. Tons of fantastic resaurants are just outside your door, and it's a short walk to the Boston Public Market or North Station for the T and commuter rail. On the 5th floor of a walk-up, it includes a private roofdeck that adds an extra 300 sq ft of outdoor living space.
+     Our 304 sq ft studio in a quiet area of the North End is perfect for anyone looking for a tiny&ndash;home experience in the heart of Boston. Tons of fantastic restaurants are just outside your door, and it's a short walk to the Boston Public Market or North Station for the T and commuter rail. On the 5th floor of a walk-up, it includes a private roofdeck that adds an extra 300 sq ft of outdoor living space.
 </p>
 
 <p class='intro'>
