update contact section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ function writeEmailLink(name, domain) {
 </p>
 
 <p class='intro'>
-  <script type="text/javascript">writeEmailLink('mekelhammer', 'gmail')</script>
+  Interested? Send us a note at <script type="text/javascript">writeEmailLink('mekelhammer', 'gmail')</script>
 </p>
 
 
