--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ function writeEmailLink(name, domain) {
       <li>Queen-sized murphy bed (bring your own mattress) with built-in desk</li>
       <li>Modern-style couch</li>
       <li>Pantry Unit</li>
-      <li>Natural gas grill (no propane tanks!)</li>      
+      <li>Natural gas grill (no propane tank needed!)</li>      
     </ul>
     <h3>Optional Furnishings</h3>
     <ul>
